[package]
name = "ascheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.2"
rustyline = { version = "13.0.0", features = ["derive"] }
